# translatex

./: .gitignore  .translatex_cache.json  README.md  config.example.yaml  glossary.yaml  main.py  pyproject.toml  requirements.txt
tests/: test_batch.py  test_cache.py  test_checkpoint.py  test_context.py  test_docs_scanner.py  test_docxtranslator.py  test_file_logger.py  test_llm_client_factory.py  test_manifest.py  test_markdown_parser.py  test_mdx_parser.py  test_openai_client.py  test_prompt_builder.py  test_retry.py
translatex/: __init__.py  batch.py  docxtranslator.py
translatex/docs/: __init__.py  manifest.py  markdown_parser.py  mdx_parser.py  scanner.py  translator.py
translatex/document/: document.py
translatex/utils/: cache.py  checkpoint.py  config.py  console.py  context.py  decorator.py  exceptions.py  file_logger.py  glossary.py  is_numeric.py  llm_client_factory.py  ollama_cloud_client.py  openai_client.py  prompt_builder.py  rate_limiter.py  retry.py  review.py  spinner.py
translatex/worker/: extractor.py  injector.py  translator.py
