[project]
name = "translatex"
version = "1.0.0"
description = "AI-powered DOCX translation with format preservation. Supports OpenAI, Gemini, Groq, and OpenRouter."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Hoang Hong Huy", email = "huy.hoanghong.work@gmail.com" }
]

dependencies = [
    "openai>=2.3.0",
    "python-docx>=1.2.0",
    "pyyaml>=6.0.3",
    "tqdm>=4.67.1",
]

[project.urls]
Homepage = "https://github.com/hoanghonghuy/translatex"
Repository = "https://github.com/hoanghonghuy/translatex"
Issues = "https://github.com/hoanghonghuy/translatex/issues"

[project.scripts]
translatex = "translatex.main:main"

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["translatex"]